# SNHU-330.Assigment5-5

./: .gitignore  .gitmodules  CMakeLists.txt  ShowcaseApp.sln  readme
ShowcaseApp/: CMakeLists.txt  ShowcaseApp.vcxproj  ShowcaseApp.vcxproj.filters  test.py
ShowcaseApp/assets/shaders/: basic_shader.frag  basic_shader.vert
ShowcaseApp/include/: application.h  camera.h  conicalfrustum.h  cylinder.h  mesh.h  shader.h  texture.h  types.h
ShowcaseApp/src/: application.cpp  camera.cpp  conicalfrustum.cpp  cylinder.cpp  main.cpp  mesh.cpp  shader.cpp  texture.cpp
